kubernetes/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: proxy
  name: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: proxy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/service: "true"
        io.kompose.service: proxy
    spec:
      containers:
        - image: nginx:alpine
          name: proxy
          ports:
            - containerPort: 80
          resources: {}
          tty: true
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: proxy-claim0
      hostname: proxy
      restartPolicy: Always
      volumes:
        - name: proxy-claim0
          persistentVolumeClaim:
            claimName: proxy-claim0
status: {}
