kubernetes/url-shortener-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-service-deployment
  labels:
    app: url-shortener-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: url-shortener-service
  template:
    metadata:
      labels:
        app: url-shortener-service
    spec:
      containers:
      - name: url-shortener-service
        image: alexantonides/wscbs-url-shortener-service
