kubernetes/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    run: user-service
spec:
  type: NodePort
  selector:
    run: user-service 
  ports:
  - port: 5001
    targetPort: 5000
    nodePort: 32411
  externalIPs:
    - 145.100.134.49
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  labels:
    app: user-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: alexantonides/wscbs-user-service
