kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: url-shortener-service
            port:
              number: 5000
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 5000
